fixed overlapping navigation with footer links bug

--- a/css/style.css
+++ b/css/style.css
@@ -581,7 +581,7 @@ body {
   height: 100vh;
   position: fixed;
   top: 0;
-  left: 0;
+  left: -10rem;
   z-index: 1500;
   opacity: 0;
   width: 0;
