--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -34,7 +34,7 @@
         height: 100vh;
         position: fixed;
         top: 0;
-        left: 0;
+        left: -10rem;
         z-index: 1500;
 
         opacity: 0;
